# indicator-messages

./: autogen.sh  configure.ac
data/: Makefile.am  indicator-messages.service.in
debian/: changelog  control  indicator-messages.install  rules
src/: im-accounts-service.c  indicator-desktop-shortcuts.c
